# smart-irrigation-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  combine_docs.py  create_all_issues.sh  main.py  mlops_plan.md  pyproject.toml  reproduce_fail.py  smart-irrigation-docs.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
airflow/: Dockerfile  requirements.txt
docker/: docker-compose.app.yml  docker-compose.data.yml  docker-compose.ml.yml  docker-compose.monitoring.yml  docker-compose.nginx.yml  docker-compose.yml
docs/: AIRFLOW.md  ALERTMANAGER.md  API_GATEWAY.md  ARCHITECTURE.md  BRANCH_NAMING.md  CODE_REVIEW.md  DATABASE.md  DATABASE_SCHEMA.md  DATA_INGESTION.md  DATA_QUALITY.md  DEPLOYMENT.md  DRIFT_MONITORING.md  END_TO_END_DATA_FLOW.md  FEATURE_ENGINEERING.md  FEATURE_ENGINEERING_GUIDE.md  GRAFANA.md  INFRASTRUCTURE.md  IRRIGATION_SYSTEM.md  JENKINS.md  MICROSERVICES.md  ML_DEMO_SCRIPT.md  ML_EXPLORATION.md  ML_PIPELINE.md  ML_TRAINING_GUIDE.md  MODEL_SERVER.md  MODEL_SERVER_API.md  MODEL_VERSIONING.md  NGINX.md  NOTIFICATION_SERVICE.md  PROJECT_TREE.md  PROMETHEUS.md  SENSOR_SIMULATOR.md  SETUP_GUIDE.md  SYSTEM_SCHEMA.md  TESTING.md  USER_SERVICE.md  WEB_DASHBOARD.md
jenkins/: Dockerfile.docker-agent  Dockerfile.jenkins  Dockerfile.python-agent  casc.yaml  docker-entrypoint.sh  plugins.txt
migrations/: 00_create_databases.sh  01_run_migrations.sh  README.md  TEMPLATE.sql  run_migrations.sql
mlops/: __init__.py  dataset_pipeline.py  evaluation.py  exploration.py  metrics.py  promotion.py  settings.py  training.py
(+140 files in other folders)
